# Object_Handler

./: README.md
Object_Handler/: CMakeLists.txt
Object_Handler/inc/: list.h  structures.h  test.h
Object_Handler/src/: list.cpp  main.cpp  test.cpp
Test_data/: Test.txt
build-Object_Handler-Desktop_Qt_6_4_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Object_Processing  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Object_Handler-Desktop_Qt_6_4_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-36931857e28c2dbdc824.json  cmakeFiles-v1-f55aa6870a1113523bb3.json  codemodel-v2-badd7fb5ddcd4ef7159c.json  directory-.-Debug-a0855f92174eea148e78.json  index-2023-10-30T16-28-29-0593.json  target-Object_Processing-Debug-9707d96bb50013b9b436.json
build-Object_Handler-Desktop_Qt_6_4_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Object_Handler-Desktop_Qt_6_4_1_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.CDD05EA7D293E7BB.idx  align.h.39AE23050B3DB93E.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.9E55EAC1E221125A.idx  atomic_base.h.F118387B313E4F7F.idx  auto_ptr.h.6C881C0DF274EBDF.idx  bessel_function.tcc.363522A49CE606F6.idx  beta_function.tcc.B17631E90F5F428F.idx  bit.80FBF70B2C290900.idx  cmath.AF48DC9BE999311F.idx  cstdint.131423F6DD978BF6.idx  cxxabi_init_exception.h.430CE6EB8B5EC125.idx  ell_integral.tcc.BB2A031CDFD4DEFA.idx  erase_if.h.B291FB0AC45EF1E5.idx  exp_integral.tcc.139A83B6E72E10F0.idx  functional.027B3EC528A2F24E.idx  gamma.tcc.9DF5E781344B25C4.idx  hashtable.h.7741C2498E025FCC.idx  (+54 more)
